--- a/dynamic-eval.cabal
+++ b/dynamic-eval.cabal
@@ -20,7 +20,7 @@ library
   exposed-modules:     Lambda
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.10 && <4.11
+  build-depends:       base >=4.10 && <4.11, bound, deriving-compat
   hs-source-dirs:      src
   default-language:    Haskell2010
 
