--- a/dynamic-eval.cabal
+++ b/dynamic-eval.cabal
@@ -20,7 +20,7 @@ library
   exposed-modules:     Lambda
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.10 && <4.11, bound, deriving-compat
+  build-depends:       base >=4.10 && <4.12, bound, deriving-compat, reflex
   hs-source-dirs:      src
   default-language:    Haskell2010
 
@@ -28,6 +28,6 @@ executable dynamic-eval
   main-is:             Main.hs
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.10 && <4.11
+  build-depends:       base >=4.10 && <4.12
   hs-source-dirs:      .
   default-language:    Haskell2010
