--- a/dynamic-eval.cabal
+++ b/dynamic-eval.cabal
@@ -20,7 +20,15 @@ library
   exposed-modules:     Lambda
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.10 && <4.12, bound, deriving-compat, reflex
+  build-depends:       base >=4.10 && <4.12
+                     , bound
+                     , containers
+                     , deriving-compat
+                     , free
+                     , reflex
+                     , reflex-dom
+                     , text
+                     , transformers
   hs-source-dirs:      src
   default-language:    Haskell2010
 
