--- a/dynamic-eval.cabal
+++ b/dynamic-eval.cabal
@@ -37,5 +37,8 @@ executable dynamic-eval
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.10 && <4.12
+                     , dynamic-eval
+                     , reflex
+                     , reflex-dom
   hs-source-dirs:      .
   default-language:    Haskell2010
